lobbies + refactor